--- a/deployment-service.yaml
+++ b/deployment-service.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: boardgame
-          image: adijaiswal/boardgame:latest # Image that will be used to containers in the cluster
+          image: 211125403425.dkr.ecr.us-east-2.amazonaws.com/cloudgenius:boardgame # Updated to use ECR image
           imagePullPolicy: Always
           ports:
             - containerPort: 8080 # The port that the container is running on in the cluster
